# fuschia

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
.claude/skills/bench/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/docs/: SKILL.md
apps/desktop/: DESIGN.md  package-lock.json  package.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/fuchsia-actor/: Cargo.toml
crates/fuchsia-actor-lua/: Cargo.toml
crates/fuchsia-actor-lua/src/: actor.rs  builder.rs  default.rs  host.rs  lib.rs
crates/fuchsia-actor-lua/tests/: lua_actor.rs
crates/fuchsia-actor-wasm/: Cargo.toml
crates/fuchsia-actor-wasm/src/: actor.rs  builder.rs  default.rs  host.rs  lib.rs
crates/fuchsia-actor-wasm/tests/: wasm_actor.rs
crates/fuchsia-actor/src/: actor.rs  channel.rs  context.rs  error.rs  lib.rs
crates/fuchsia-capabilities/: Cargo.toml
crates/fuchsia-capabilities/src/: http.rs  lib.rs
crates/fuchsia-runtime/: Cargo.toml
crates/fuchsia-runtime/benches/: chain_throughput.rs  fan_out.rs
crates/fuchsia-runtime/benches/common/: mod.rs
crates/fuchsia-runtime/src/: graph.rs  lib.rs  orchestrator.rs  registry.rs
crates/fuchsia-runtime/tests/: basic.rs
crates/fuschia-artifact/: Cargo.toml
crates/fuschia-artifact/src/: lib.rs
crates/fuschia-component-registry/: Cargo.toml  README.md
crates/fuschia-component-registry/src/: fs_registry.rs  in_memory.rs  lib.rs  manifest.rs  registry.rs
crates/fuschia-config/: Cargo.toml
crates/fuschia-config/src/: component.rs  enums.rs  lib.rs
crates/fuschia-engine/: Cargo.toml
crates/fuschia-engine/src/: cache.rs  engine.rs  error.rs  events.rs  input.rs  lib.rs  runner.rs
crates/fuschia-engine/tests/: integration.rs
crates/fuschia-host/: Cargo.toml
crates/fuschia-host-config/: Cargo.toml
crates/fuschia-host-config/src/: lib.rs
crates/fuschia-host-http/: Cargo.toml
crates/fuschia-host-http/src/: lib.rs
crates/fuschia-host-kv/: Cargo.toml
crates/fuschia-host-kv/src/: lib.rs
crates/fuschia-host-log/: Cargo.toml
crates/fuschia-host-log/src/: lib.rs
crates/fuschia-host/src/: engine.rs  kv.rs  lib.rs  state.rs
crates/fuschia-resolver/: Cargo.toml  README.md
crates/fuschia-resolver/src/: error.rs  resolver.rs
crates/fuschia-runtime/: Cargo.toml
crates/fuschia-runtime/src/: cache.rs  error.rs  input.rs  lib.rs  result.rs  runtime.rs  task.rs  trigger.rs
crates/fuschia-runtime/tests/: runtime_test.rs  task_test.rs  trigger_test.rs
crates/fuschia-store/: Cargo.toml
crates/fuschia-store/src/: lib.rs  sqlite.rs  types.rs
crates/fuschia-task/: Cargo.toml  README.md
crates/fuschia-task-executor/: Cargo.toml
crates/fuschia-task-executor/src/: error.rs  executor.rs  lib.rs  result.rs
crates/fuschia-task-host/: Cargo.toml
crates/fuschia-task-host/src/: bindings.rs  executor.rs  lib.rs
crates/fuschia-task-host/tests/: integration.rs
crates/fuschia-task-runtime/: Cargo.toml
crates/fuschia-task-runtime-lua/: Cargo.toml
crates/fuschia-task-runtime-lua/src/: bindings.rs  executor.rs  lib.rs
crates/fuschia-task-runtime-lua/tests/: e2e.rs
crates/fuschia-task-runtime-wasm/: Cargo.toml
crates/fuschia-task-runtime-wasm/src/: bindings.rs  executor.rs  lib.rs
crates/fuschia-task-runtime-wasm/tests/: e2e.rs
crates/fuschia-task-runtime/src/: executor.rs  lib.rs  registry.rs
crates/fuschia-task/src/: component.rs  execute.rs  lib.rs  types.rs
crates/fuschia-trigger/: Cargo.toml
crates/fuschia-trigger-host/: Cargo.toml
crates/fuschia-trigger-host/src/: bindings.rs  executor.rs  lib.rs
crates/fuschia-trigger-host/tests/: integration.rs
crates/fuschia-trigger/src/: lib.rs  types.rs
crates/fuschia-workflow/: Cargo.toml
crates/fuschia-workflow-executor/: Cargo.toml
crates/fuschia-workflow-executor/src/: cache.rs  error.rs  executor.rs  lib.rs  result.rs
crates/fuschia-workflow-orchestrator/: Cargo.toml
crates/fuschia-workflow-orchestrator/src/: capabilities.rs  error.rs  input.rs  lib.rs  orchestrator.rs  result.rs
crates/fuschia-workflow-orchestrator/tests/: lua_integration.rs
crates/fuschia-workflow-runtime/: Cargo.toml
crates/fuschia-workflow-runtime/src/: cache.rs  error.rs  execution.rs  input.rs  lib.rs  runtime.rs  task.rs
crates/fuschia-workflow/src/: graph.rs  lib.rs  node.rs  workflow.rs
crates/fuschia-world/: Cargo.toml
crates/fuschia-world/src/: lib.rs
crates/fuscia-artifact/: Cargo.toml
crates/fuscia-artifact/src/: fs.rs  lib.rs
crates/fuscia-component/: Cargo.toml  README.md
crates/fuscia-component-registry/: Cargo.toml
crates/fuscia-component-registry/src/: lib.rs
crates/fuscia-component/src/: error.rs  fs_registry.rs  lib.rs  manifest.rs  registry.rs
crates/fuscia-config/: Cargo.toml
crates/fuscia-config/src/: component.rs  edge.rs  enums.rs  (+4 more)
crates/fuscia-engine/: Cargo.toml
crates/fuscia-engine/src/: engine.rs  error.rs  input.rs  lib.rs  runner.rs
crates/fuscia-engine/tests/: integration.rs
crates/fuscia-host/: Cargo.toml
crates/fuscia-host/src/: error.rs  lib.rs
crates/fuscia-resolver/: Cargo.toml  README.md
crates/fuscia-resolver/src/: error.rs  lib.rs  resolver.rs
crates/fuscia-store/: Cargo.toml
crates/fuscia-store/src/: lib.rs  sqlite.rs
crates/fuscia-task/: Cargo.toml  README.md
crates/fuscia-task-host/: Cargo.toml
crates/fuscia-task-host/src/: bindings.rs  executor.rs  lib.rs
crates/fuscia-task-host/tests/: integration.rs
crates/fuscia-task/src/: component.rs  error.rs  http.rs  types.rs
crates/fuscia-trigger/: Cargo.toml
crates/fuscia-trigger-host/: Cargo.toml
crates/fuscia-workflow/: Cargo.toml
crates/fuscia-world/: Cargo.toml
docs/: ANALYSIS.md  COMMAND_EXECUTION.md  DESIGN.md  USE_CASES.md
docs/book/: book.toml
examples/: README.md  simple-workflow.json
migrations/: 20260110_001_initial.sql
src/: main.rs
test-components/test-actor-component/: Cargo.toml
test-components/test-task-component/: Cargo.toml
test-components/test-trigger-component/: Cargo.toml
wit/: trigger.wit  world.wit
(+85 files in other folders)
