[package]
name = "fuschia"
edition.workspace = true
version.workspace = true

[[bin]]
name = "fuschia"
path = "src/main.rs"

[workspace]
package.edition = "2024"
package.version = "0.0.1-alpha.0"
exclude = [
  "test-components/test-task-component",
  "test-components/test-trigger-component",
]
members = [
  "crates/fuschia-artifact",
  "crates/fuschia-component-registry",
  "crates/fuschia-config",
  "crates/fuschia-host-config",
  "crates/fuschia-host-http",
  "crates/fuschia-host-kv",
  "crates/fuschia-host-log",
  "crates/fuschia-resolver",
  "crates/fuschia-task-runtime",
  "crates/fuschia-task-runtime-lua",
  "crates/fuschia-task-runtime-wasm",
  "crates/fuschia-workflow",
  "crates/fuschia-workflow-orchestrator",
  "crates/fuschia-world",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde_json = "1"
anyhow = "1"

fuschia-config = { path = "crates/fuschia-config" }
fuschia-component-registry = { path = "crates/fuschia-component-registry" }
fuschia-resolver = { path = "crates/fuschia-resolver" }
fuschia-workflow-orchestrator = { path = "crates/fuschia-workflow-orchestrator" }
fuschia-task-runtime = { path = "crates/fuschia-task-runtime", features = ["wasm"] }
fuschia-task-runtime-wasm = { path = "crates/fuschia-task-runtime-wasm" }
