[workspace]
resolver = "2"
package.edition = "2024"
package.version = "0.0.1-alpha.0"
exclude = [
  "test-components/test-actor-component",
]
members = [
  "crates/fuchsia-actor",
  "crates/fuchsia-actor-lua",
  "crates/fuchsia-actor-wasm",
  "crates/fuchsia-capabilities",
  "crates/fuchsia-runtime",
]
