[package]
name = "fuchsia-actor-lua"
edition.workspace = true
version.workspace = true
description = "Lua-script-hosting Actor implementation for fuchsia-runtime"

[dependencies]
fuchsia-actor = { path = "../fuchsia-actor" }
fuchsia-capabilities = { path = "../fuchsia-capabilities" }
async-trait = "0.1"
futures = "0.3"
mlua = { version = "0.10", features = ["lua54", "send", "vendored"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros"] }
tracing = "0.1"

[dev-dependencies]
fuchsia-runtime = { path = "../fuchsia-runtime" }
tokio = { version = "1", features = ["full"] }
