[package]
name = "fuchsia-actor-wasm"
edition.workspace = true
version.workspace = true
description = "Wasm component-hosting Actor implementation for fuchsia-runtime"

[dependencies]
fuchsia-actor = { path = "../fuchsia-actor" }
fuchsia-capabilities = { path = "../fuchsia-capabilities" }
async-trait = "0.1"
futures = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros"] }
tracing = "0.1"
wasmtime = { version = "40", features = ["component-model", "async"] }
wasmtime-wasi = "40"

[dev-dependencies]
fuchsia-runtime = { path = "../fuchsia-runtime" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
