[package]
name = "fuchsia-capabilities"
edition.workspace = true
version.workspace = true
description = "Universal capability interfaces (HTTP, ...) for fuchsia hosts and actors"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
thiserror = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
