[package]
name = "fuschia-artifact"
edition.workspace = true
version.workspace = true
description = "Artifact storage trait and implementations for Fuschia"

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
