[package]
name = "fuschia-engine"
edition.workspace = true
version.workspace = true
description = "Workflow execution engine for fuschia - provides WorkflowRunner and re-exports workflow-executor"

[dependencies]
fuschia-workflow = { path = "../fuschia-workflow" }
fuschia-workflow-runtime = { path = "../fuschia-workflow-runtime" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
fuschia-component-registry = { path = "../fuschia-component-registry" }
fuschia-config = { path = "../fuschia-config" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"
