[package]
name = "fuschia-host-http"
edition.workspace = true
version.workspace = true
description = "HTTP client host capability with policy enforcement for fuschia task execution"

[dependencies]
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
