[package]
name = "fuschia-resolver"
edition.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1"
fuschia-component-registry = { path = "../fuschia-component-registry" }
fuschia-config = { path = "../fuschia-config" }
fuschia-workflow = { path = "../fuschia-workflow" }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
