[package]
name = "fuschia-task-executor"
edition.workspace = true
version.workspace = true
description = "Task execution for fuschia workflows"

[dependencies]
fuschia-task-host = { path = "../fuschia-task-host" }
fuschia-host = { path = "../fuschia-host" }
wasmtime = { version = "40", features = ["component-model", "async"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
