[package]
name = "fuschia-task-runtime-lua"
edition.workspace = true
version.workspace = true
description = "Lua implementation of NodeExecutor for fuschia task execution"

[dependencies]
fuschia-task-runtime = { path = "../fuschia-task-runtime" }
fuschia-host-kv = { path = "../fuschia-host-kv" }
fuschia-host-config = { path = "../fuschia-host-config" }
fuschia-host-log = { path = "../fuschia-host-log" }
fuschia-host-http = { path = "../fuschia-host-http" }
mlua = { version = "0.10", features = ["lua54", "send", "vendored"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
