[package]
name = "fuschia-task-runtime-wasm"
edition.workspace = true
version.workspace = true
description = "Wasmtime implementation of NodeExecutor for fuschia task execution"

[dependencies]
fuschia-task-runtime = { path = "../fuschia-task-runtime" }
fuschia-host-kv = { path = "../fuschia-host-kv" }
fuschia-host-config = { path = "../fuschia-host-config" }
fuschia-host-log = { path = "../fuschia-host-log" }
fuschia-host-http = { path = "../fuschia-host-http" }
wasmtime = { version = "40", features = ["component-model", "async"] }
wasmtime-wasi = { version = "40" }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
