[package]
name = "fuschia-task-runtime"
edition.workspace = true
version.workspace = true
description = "Runtime abstraction for fuschia task execution — NodeExecutor trait and Capabilities"

[features]
default = ["wasm"]
wasm = []
lua = []

[dependencies]
fuschia-host-kv = { path = "../fuschia-host-kv" }
fuschia-host-config = { path = "../fuschia-host-config" }
fuschia-host-log = { path = "../fuschia-host-log" }
fuschia-host-http = { path = "../fuschia-host-http" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
