[package]
name = "fuschia-trigger-host"
edition.workspace = true
version.workspace = true
description = "Trigger component execution for fuschia"

[dependencies]
fuschia-host = { path = "../fuschia-host" }
wasmtime = { version = "40", features = ["component-model", "async"] }
wasmtime-wasi = { version = "40" }
thiserror = "2"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
