[package]
name = "fuschia-workflow-executor"
edition.workspace = true
version.workspace = true
description = "Workflow execution for fuschia - graph traversal, scheduling, and orchestration"

[dependencies]
fuschia-workflow = { path = "../fuschia-workflow" }
fuschia-config = { path = "../fuschia-config" }
fuschia-task-executor = { path = "../fuschia-task-executor" }
wasmtime = { version = "40", features = ["component-model", "async"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
