[package]
name = "fuschia-workflow-orchestrator"
edition.workspace = true
version.workspace = true
description = "Workflow orchestrator for fuschia — DAG execution, scheduling, and input resolution"

[dependencies]
# Workflow types
fuschia-workflow = { path = "../fuschia-workflow" }
fuschia-config = { path = "../fuschia-config" }
fuschia-component-registry = { path = "../fuschia-component-registry" }

# Runtime abstraction
fuschia-task-runtime = { path = "../fuschia-task-runtime", features = ["wasm", "lua"] }

# Host capability implementations (for constructing Capabilities)
fuschia-host-kv = { path = "../fuschia-host-kv" }
fuschia-host-config = { path = "../fuschia-host-config" }
fuschia-host-log = { path = "../fuschia-host-log" }
fuschia-host-http = { path = "../fuschia-host-http" }

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Template resolution
minijinja = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
fuschia-task-runtime-lua = { path = "../fuschia-task-runtime-lua" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
