[package]
name = "fuschia-workflow-runtime"
edition.workspace = true
version.workspace = true
description = "Workflow runtime for fuschia - executes workflows and individual nodes"

[dependencies]
fuschia-workflow = { path = "../fuschia-workflow" }
fuschia-config = { path = "../fuschia-config" }
fuschia-task-host = { path = "../fuschia-task-host" }
fuschia-host = { path = "../fuschia-host" }
wasmtime = { version = "40", features = ["component-model", "async"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
