[package]
name = "fuscia-engine"
edition.workspace = true
version.workspace = true
description = "Workflow execution engine for fuscia"

[dependencies]
fuscia-workflow = { path = "../fuscia-workflow" }
fuscia-config = { path = "../fuscia-config" }
fuscia-task-host = { path = "../fuscia-task-host" }
fuscia-host = { path = "../fuscia-host" }
fuscia-component = { path = "../fuscia-component" }
wasmtime = { version = "40", features = ["component-model", "async"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"
