[package]
name = "fuscia-host"
edition.workspace = true
version.workspace = true
description = "Shared wasmtime infrastructure for fuscia component hosting"

[dependencies]
wasmtime = { version = "40", features = ["component-model", "async"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
