[package]
name = "fuscia-store"
edition.workspace = true
version.workspace = true
description = "Workflow and execution storage trait and implementations for Fuscia"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "2"
