[package]
name = "fuscia-task"
edition.workspace = true
version.workspace = true

[dependencies]
fuscia-component = { path = "../fuscia-component" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["time"] }
